<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HeatPumpEvents" Id="{4c464cec-5935-435f-b955-66dd08a03c4f}">
    <Declaration><![CDATA[TYPE ST_HeatPumpEvents :
STRUCT
	b_CommError			: BOOL;
	b_ProbeError		: BOOL;
	b_PressureError		: BOOL;
	b_CompressorError	: BOOL;
	b_ValveError		: BOOL;
	b_FanError			: BOOL;
	b_PumpError			: BOOL;
	b_WaterTempError	: BOOL;
	b_IOError			: BOOL;
	
	b_CommWarning		:	BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>