<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HeatPumpGet" Id="{432044be-355d-481a-bff6-9f48e6ab4142}">
    <Declaration><![CDATA[TYPE ST_HeatPumpGet :
STRUCT
	HeatPumpState 	: 	eHeatPumpState;
	Setpoint		:	REAL;
	Events			: 	ST_HeatPumpEvents;
	
	HeatpumpData	:	ST_HeatpumpData;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>