<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="st_OperatingPoint" Id="{c3cf3b58-5238-4d23-9ded-465a43b916e0}">
    <Declaration><![CDATA[TYPE st_OperatingPoint :
STRUCT
	OperatingMode	:	eHeatpumpMode;
	Setpoint		:	REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>